--- a/data/svg.toml
+++ b/data/svg.toml
@@ -329,14 +329,12 @@ kakaotalk = '''
         d="m18.25 9.689v-1.189c0-.992-1.5-.993-1.5 0v5c0 .992 1.5.993 1.5 0v-1.469c1.605 1.746 1.657 2.219 2.25 2.219.63 0 .991-.747.569-1.239l-1.857-2.163 1.823-1.823c.002-.003.005-.005.007-.008.001-.001.002-.002.003-.003.681-.706-.373-1.747-1.07-1.05z" />
 </svg>
 '''
-[instagram-simple]
-svg = """
+instagram-simple = """
 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 <path d="M7.75 2A5.75 5.75 0 0 0 2 7.75v8.5A5.75 5.75 0 0 0 7.75 22h8.5A5.75 5.75 0 0 0 22 16.25v-8.5A5.75 5.75 0 0 0 16.25 2zm0 1.5h8.5A4.25 4.25 0 0 1 20.5 7.75v8.5A4.25 4.25 0 0 1 16.25 20.5h-8.5A4.25 4.25 0 0 1 3.5 16.25v-8.5A4.25 4.25 0 0 1 7.75 3.5zm7.75 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 1.5a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7z"/>
 </svg>
 """
-[bilibili-simple]
-svg = """
+bilibili-simple = """
 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 <path d="M3.23 7.75c0-.94.76-1.7 1.7-1.7h.6l-1.14-1.9a1.21 1.21 0 1 1 2.06-1.22l1.75 2.87h7.6l1.75-2.87a1.21 1.21 0 1 1 2.06 1.22l-1.14 1.9h.6c.94 0 1.7.76 1.7 1.7v8.9c0 .94-.76 1.7-1.7 1.7H4.93c-.94 0-1.7-.76-1.7-1.7v-8.9zm2.5 1.7v5.5h12.54v-5.5H5.73zm3.03 1.1c.61 0 1.1.61 1.1 1.35s-.49 1.35-1.1 1.35-1.1-.61-1.1-1.35.49-1.35 1.1-1.35zm6.51 0c.61 0 1.1.61 1.1 1.35s-.49 1.35-1.1 1.35-1.1-.61-1.1-1.35.49-1.35 1.1-1.35z"/>
 </svg>
