--- a/data/svg.toml
+++ b/data/svg.toml
@@ -34,11 +34,15 @@ behance = '''
         d="M1.774 18.063V5.466h5.51c1.978 0 3.116 1.326 3.055 2.806-.043 1.049-.711 2.988-2.643 2.988h-5.93H7.73c1.224 0 3.532 1.13 3.532 3.532 0 2.4-1.873 3.27-3.318 3.27zm12.57-4.459h7.89s.012-4.18-4.167-4.18c-5.237 0-5.277 9.11-.3 9.11 3.06 0 3.935-1.806 3.935-1.806M15.526 5.823h4.987" />
 </svg>
 '''
-bilibili-simple = """
-<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-<path d="M3.23 7.75c0-.94.76-1.7 1.7-1.7h.6l-1.14-1.9a1.21 1.21 0 1 1 2.06-1.22l1.75 2.87h7.6l1.75-2.87a1.21 1.21 0 1 1 2.06 1.22l-1.14 1.9h.6c.94 0 1.7.76 1.7 1.7v8.9c0 .94-.76 1.7-1.7 1.7H4.93c-.94 0-1.7-.76-1.7-1.7v-8.9zm2.5 1.7v5.5h12.54v-5.5H5.73zm3.03 1.1c.61 0 1.1.61 1.1 1.35s-.49 1.35-1.1 1.35-1.1-.61-1.1-1.35.49-1.35 1.1-1.35zm6.51 0c.61 0 1.1.61 1.1 1.35s-.49 1.35-1.1 1.35-1.1-.61-1.1-1.35.49-1.35 1.1-1.35z"/>
+bilibili = '''
+<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg">
+    <rect x="1.3333" y="6" width="21.333" height="15.333" rx="4" ry="4"/>
+    <path d="m8 12.4v1.2"/>
+    <path d="m16 12.4v1.2"/>
+    <path d="m5.8853 2.6667 2.6667 2.6667"/>
+    <path d="m18.115 2.6667-2.6667 2.6667"/>
 </svg>
-"""
+'''
 bitcoin = '''
 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
     <path
@@ -293,11 +297,14 @@ hackthebox = '''
     </g>
 </svg>
 '''
-instagram-simple = """
-<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-<path d="M7.75 2A5.75 5.75 0 0 0 2 7.75v8.5A5.75 5.75 0 0 0 7.75 22h8.5A5.75 5.75 0 0 0 22 16.25v-8.5A5.75 5.75 0 0 0 16.25 2zm0 1.5h8.5A4.25 4.25 0 0 1 20.5 7.75v8.5A4.25 4.25 0 0 1 16.25 20.5h-8.5A4.25 4.25 0 0 1 3.5 16.25v-8.5A4.25 4.25 0 0 1 7.75 3.5zm7.75 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 1.5a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7z"/>
+instagram = '''
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+    <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+    <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
 </svg>
-"""
+'''
 itchio = '''
 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 245.371 220.736">
     <path
@@ -322,16 +329,6 @@ kakaotalk = '''
         d="m18.25 9.689v-1.189c0-.992-1.5-.993-1.5 0v5c0 .992 1.5.993 1.5 0v-1.469c1.605 1.746 1.657 2.219 2.25 2.219.63 0 .991-.747.569-1.239l-1.857-2.163 1.823-1.823c.002-.003.005-.005.007-.008.001-.001.002-.002.003-.003.681-.706-.373-1.747-1.07-1.05z" />
 </svg>
 '''
-instagram-simple = """
-<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-<path d="M7.75 2A5.75 5.75 0 0 0 2 7.75v8.5A5.75 5.75 0 0 0 7.75 22h8.5A5.75 5.75 0 0 0 22 16.25v-8.5A5.75 5.75 0 0 0 16.25 2zm0 1.5h8.5A4.25 4.25 0 0 1 20.5 7.75v8.5A4.25 4.25 0 0 1 16.25 20.5h-8.5A4.25 4.25 0 0 1 3.5 16.25v-8.5A4.25 4.25 0 0 1 7.75 3.5zm7.75 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zM12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 1.5a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7z"/>
-</svg>
-"""
-bilibili-simple = """
-<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-<path d="M3.23 7.75c0-.94.76-1.7 1.7-1.7h.6l-1.14-1.9a1.21 1.21 0 1 1 2.06-1.22l1.75 2.87h7.6l1.75-2.87a1.21 1.21 0 1 1 2.06 1.22l-1.14 1.9h.6c.94 0 1.7.76 1.7 1.7v8.9c0 .94-.76 1.7-1.7 1.7H4.93c-.94 0-1.7-.76-1.7-1.7v-8.9zm2.5 1.7v5.5h12.54v-5.5H5.73zm3.03 1.1c.61 0 1.1.61 1.1 1.35s-.49 1.35-1.1 1.35-1.1-.61-1.1-1.35.49-1.35 1.1-1.35zm6.51 0c.61 0 1.1.61 1.1 1.35s-.49 1.35-1.1 1.35-1.1-.61-1.1-1.35.49-1.35 1.1-1.35z"/>
-</svg>
-"""
 keybase = '''
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 71 76.3" version="1.1" fill="currentColor" stroke="none">
     <path
