--- a/hugo.toml
+++ b/hugo.toml
@@ -21,7 +21,7 @@ EnableInstantClick = false
 
 # --- Logo ---
 [params.logo]
-icon = "logo.png"     
+icon = "favicon.png"     
 iconWidth = 128        
 iconHeight = 128
 text = ""             
