--- a/hugo.toml
+++ b/hugo.toml
@@ -16,6 +16,7 @@ pagerSize = 10
 # Params
 ##############################
 [params]
+disableKinds = ["RSS"]
 TocSide = "left"
 EnableInstantClick = false
 disableRSS = true
