--- a/hugo.toml
+++ b/hugo.toml
@@ -51,6 +51,11 @@ text = ""
   name = "Archives"
   url = "/archives/"
   weight = 3
+  [[menu.main]]
+  name = "Search"
+  url = "/search/"
+  weight = 4
+  
     [menu.main.params]
     external = false
 
