--- a/hugo.toml
+++ b/hugo.toml
@@ -53,6 +53,11 @@ text = ""
   name = "Archives"
   url = "/archives/"
   weight = 4
+ 
+  [[menu.main]]
+  name = "Newsletter"
+  url = "/newsletter/"
+  weight = 4
   
   [menu.main.params]
     external = false
