--- a/hugo.toml
+++ b/hugo.toml
@@ -49,19 +49,26 @@ text = ""
   name = "Blog"
   url = "/posts/"
   weight = 3
-  
+
+  [[menu.main]]
+  name = "Search"
+  url = "/archive/"
+  weight = 4 
+
   [[menu.main]]
   name = "Archives"
   url = "/archives/"
-  weight = 4
+  weight = 5
  
   [[menu.main]]
   name = "Newsletter"
   url = "/newsletter/"
-  weight = 4
+  weight = 6
   
   [menu.main.params]
     external = false
+
+archive
 
 # --- Social Icons ---
 [[params.social]]
