--- a/hugo.toml
+++ b/hugo.toml
@@ -62,6 +62,15 @@ text = ""
   
   [menu.main.params]
     external = false
+	
+[params.fuseOpts]
+isCaseSensitive = false
+shouldSort = true
+location = 0
+distance = 1000
+threshold = 0.4
+minMatchCharLength = 0
+keys = ["title", "permalink", "summary", "content"]
 
 # --- Social Icons ---
 [[params.social]]
