--- a/hugo.toml
+++ b/hugo.toml
@@ -27,7 +27,8 @@ defaultTheme = "auto"
 disableThemeToggle = false
 # --- Logo ---
 [params.logo] 
-icon = "favicon.png" 
+icon = "favicon.png"
+appleTouchIcon = "img/apple-touch-icon.png" 
 iconWidth = 128        
 iconHeight = 128
 text = ""             
