update count logical

--- a/hugo.toml
+++ b/hugo.toml
@@ -11,6 +11,11 @@ disqusShortname = ""
   home = ["HTML", "JSON"]
   section = ["HTML"]
 
+
+[sitemap]
+  changefreq = "monthly"
+  filename = "sitemap.xml"
+  priority = 0.5
 ##############################
 # Pagination
 ##############################
